japis/OwnLanguage/src/antlr/SetLexerParser.py
# Generated from SetLexerParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SetLexerParser ( Parser ):

    grammarFileName = "SetLexerParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "'and'", "'break'", "'continue'", "'def'", "'else'", 
                     "'False'", "'for'", "'if'", "'in'", "'None'", "'not'", 
                     "'or'", "'return'", "'True'", "'while'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'.'", "'('", 
                     "')'", "'['", "']'", "','", "':'", "';'", "'='", "'+'", 
                     "'-'", "'*'", "'^'", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "STRING", "NUMBER", 
                      "AND", "BREAK", "CONTINUE", "DEF", "ELSE", "FALSE", 
                      "FOR", "IF", "IN", "NONE", "NOT", "OR", "RETURN", 
                      "TRUE", "WHILE", "WS", "NEWLINE", "ID", "DECIMAL_INTEGER", 
                      "DOT", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACK", 
                      "CLOSE_BRACK", "COMMA", "COLON", "SEMI_COLON", "ASSIGN", 
                      "UNION", "DIFFERENCE", "INTERSECTION", "SYMMETRIC_DIFFERENCE", 
                      "EQUALS", "NOT_EQ_2", "UNKNOWN_CHAR" ]

    RULE_program = 0
    RULE_funcDef = 1
    RULE_parameters = 2
    RULE_typedargslist = 3
    RULE_block = 4
    RULE_statement = 5
    RULE_simple_statement = 6
    RULE_expr_statement = 7
    RULE_flow_statement = 8
    RULE_compound_statement = 9
    RULE_if_statement = 10
    RULE_while_statement = 11
    RULE_for_statement = 12
    RULE_test = 13
    RULE_or_test = 14
    RULE_and_test = 15
    RULE_not_test = 16
    RULE_comparison = 17
    RULE_comp_op = 18
    RULE_expr = 19
    RULE_set_operation = 20
    RULE_atom = 21
    RULE_functionCall = 22
    RULE_exprlist = 23
    RULE_testlist = 24
    RULE_arglist = 25
    RULE_argument = 26

    ruleNames =  [ "program", "funcDef", "parameters", "typedargslist", 
                   "block", "statement", "simple_statement", "expr_statement", 
                   "flow_statement", "compound_statement", "if_statement", 
                   "while_statement", "for_statement", "test", "or_test", 
                   "and_test", "not_test", "comparison", "comp_op", "expr", 
                   "set_operation", "atom", "functionCall", "exprlist", 
                   "testlist", "arglist", "argument" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    STRING=3
    NUMBER=4
    AND=5
    BREAK=6
    CONTINUE=7
    DEF=8
    ELSE=9
    FALSE=10
    FOR=11
    IF=12
    IN=13
    NONE=14
    NOT=15
    OR=16
    RETURN=17
    TRUE=18
    WHILE=19
    WS=20
    NEWLINE=21
    ID=22
    DECIMAL_INTEGER=23
    DOT=24
    OPEN_PAREN=25
    CLOSE_PAREN=26
    OPEN_BRACK=27
    CLOSE_BRACK=28
    COMMA=29
    COLON=30
    SEMI_COLON=31
    ASSIGN=32
    UNION=33
    DIFFERENCE=34
    INTERSECTION=35
    SYMMETRIC_DIFFERENCE=36
    EQUALS=37
    NOT_EQ_2=38
    UNKNOWN_CHAR=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SetLexerParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SetLexerParser.StatementContext)
            else:
                return self.getTypedRuleContext(SetLexerParser.StatementContext,i)


        def getRuleIndex(self):
            return SetLexerParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SetLexerParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SetLexerParser.STRING) | (1 << SetLexerParser.NUMBER) | (1 << SetLexerParser.BREAK) | (1 << SetLexerParser.CONTINUE) | (1 << SetLexerParser.DEF) | (1 << SetLexerParser.FALSE) | (1 << SetLexerParser.FOR) | (1 << SetLexerParser.IF) | (1 << SetLexerParser.NONE) | (1 << SetLexerParser.NOT) | (1 << SetLexerParser.RETURN) | (1 << SetLexerParser.TRUE) | (1 << SetLexerParser.WHILE) | (1 << SetLexerParser.ID))) != 0):
                self.state = 54
                self.statement()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(SetLexerParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(SetLexerParser.DEF, 0)

        def ID(self):
            return self.getToken(SetLexerParser.ID, 0)

        def parameters(self):
            return self.getTypedRuleContext(SetLexerParser.ParametersContext,0)


        def block(self):
            return self.getTypedRuleContext(SetLexerParser.BlockContext,0)


        def getRuleIndex(self):
            return SetLexerParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)




    def funcDef(self):

        localctx = SetLexerParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(SetLexerParser.DEF)
            self.state = 63
            self.match(SetLexerParser.ID)
            self.state = 64
            self.parameters()
            self.state = 65
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAREN(self):
            return self.getToken(SetLexerParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(SetLexerParser.CLOSE_PAREN, 0)

        def typedargslist(self):
            return self.getTypedRuleContext(SetLexerParser.TypedargslistContext,0)


        def getRuleIndex(self):
            return SetLexerParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = SetLexerParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(SetLexerParser.OPEN_PAREN)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SetLexerParser.ID:
                self.state = 68
                self.typedargslist()


            self.state = 71
            self.match(SetLexerParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypedargslistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SetLexerParser.ID)
            else:
                return self.getToken(SetLexerParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SetLexerParser.COMMA)
            else:
                return self.getToken(SetLexerParser.COMMA, i)

        def getRuleIndex(self):
            return SetLexerParser.RULE_typedargslist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedargslist" ):
                listener.enterTypedargslist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedargslist" ):
                listener.exitTypedargslist(self)




    def typedargslist(self):

        localctx = SetLexerParser.TypedargslistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typedargslist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(SetLexerParser.ID)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SetLexerParser.COMMA:
                self.state = 74
                self.match(SetLexerParser.COMMA)
                self.state = 75
                self.match(SetLexerParser.ID)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(SetLexerParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(SetLexerParser.DEDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SetLexerParser.StatementContext)
            else:
                return self.getTypedRuleContext(SetLexerParser.StatementContext,i)


        def getRuleIndex(self):
            return SetLexerParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = SetLexerParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(SetLexerParser.INDENT)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.statement()
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SetLexerParser.STRING) | (1 << SetLexerParser.NUMBER) | (1 << SetLexerParser.BREAK) | (1 << SetLexerParser.CONTINUE) | (1 << SetLexerParser.DEF) | (1 << SetLexerParser.FALSE) | (1 << SetLexerParser.FOR) | (1 << SetLexerParser.IF) | (1 << SetLexerParser.NONE) | (1 << SetLexerParser.NOT) | (1 << SetLexerParser.RETURN) | (1 << SetLexerParser.TRUE) | (1 << SetLexerParser.WHILE) | (1 << SetLexerParser.ID))) != 0)):
                    break

            self.state = 87
            self.match(SetLexerParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_statement(self):
            return self.getTypedRuleContext(SetLexerParser.Simple_statementContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(SetLexerParser.Compound_statementContext,0)


        def getRuleIndex(self):
            return SetLexerParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SetLexerParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SetLexerParser.STRING, SetLexerParser.NUMBER, SetLexerParser.BREAK, SetLexerParser.CONTINUE, SetLexerParser.FALSE, SetLexerParser.NONE, SetLexerParser.NOT, SetLexerParser.RETURN, SetLexerParser.TRUE, SetLexerParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.simple_statement()
                pass
            elif token in [SetLexerParser.DEF, SetLexerParser.FOR, SetLexerParser.IF, SetLexerParser.WHILE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.compound_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Simple_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_statement(self):
            return self.getTypedRuleContext(SetLexerParser.Expr_statementContext,0)


        def flow_statement(self):
            return self.getTypedRuleContext(SetLexerParser.Flow_statementContext,0)


        def getRuleIndex(self):
            return SetLexerParser.RULE_simple_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_statement" ):
                listener.enterSimple_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_statement" ):
                listener.exitSimple_statement(self)




    def simple_statement(self):

        localctx = SetLexerParser.Simple_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_simple_statement)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SetLexerParser.STRING, SetLexerParser.NUMBER, SetLexerParser.FALSE, SetLexerParser.NONE, SetLexerParser.NOT, SetLexerParser.TRUE, SetLexerParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.expr_statement()
                pass
            elif token in [SetLexerParser.BREAK, SetLexerParser.CONTINUE, SetLexerParser.RETURN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.flow_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expr_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SetLexerParser.TestContext)
            else:
                return self.getTypedRuleContext(SetLexerParser.TestContext,i)


        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(SetLexerParser.ASSIGN)
            else:
                return self.getToken(SetLexerParser.ASSIGN, i)

        def getRuleIndex(self):
            return SetLexerParser.RULE_expr_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_statement" ):
                listener.enterExpr_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_statement" ):
                listener.exitExpr_statement(self)




    def expr_statement(self):

        localctx = SetLexerParser.Expr_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expr_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.test()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SetLexerParser.ASSIGN:
                self.state = 98
                self.match(SetLexerParser.ASSIGN)
                self.state = 99
                self.test()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Flow_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(SetLexerParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(SetLexerParser.CONTINUE, 0)

        def RETURN(self):
            return self.getToken(SetLexerParser.RETURN, 0)

        def testlist(self):
            return self.getTypedRuleContext(SetLexerParser.TestlistContext,0)


        def getRuleIndex(self):
            return SetLexerParser.RULE_flow_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlow_statement" ):
                listener.enterFlow_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlow_statement" ):
                listener.exitFlow_statement(self)




    def flow_statement(self):

        localctx = SetLexerParser.Flow_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_flow_statement)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SetLexerParser.BREAK]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(SetLexerParser.BREAK)
                pass
            elif token in [SetLexerParser.CONTINUE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(SetLexerParser.CONTINUE)
                pass
            elif token in [SetLexerParser.RETURN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.match(SetLexerParser.RETURN)
                self.state = 109
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 108
                    self.testlist()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(SetLexerParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(SetLexerParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(SetLexerParser.For_statementContext,0)


        def funcDef(self):
            return self.getTypedRuleContext(SetLexerParser.FuncDefContext,0)


        def getRuleIndex(self):
            return SetLexerParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)




    def compound_statement(self):

        localctx = SetLexerParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_compound_statement)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SetLexerParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.if_statement()
                pass
            elif token in [SetLexerParser.WHILE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.while_statement()
                pass
            elif token in [SetLexerParser.FOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.for_statement()
                pass
            elif token in [SetLexerParser.DEF]:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.funcDef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SetLexerParser.IF, 0)

        def test(self):
            return self.getTypedRuleContext(SetLexerParser.TestContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SetLexerParser.BlockContext)
            else:
                return self.getTypedRuleContext(SetLexerParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(SetLexerParser.ELSE, 0)

        def getRuleIndex(self):
            return SetLexerParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)




    def if_statement(self):

        localctx = SetLexerParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(SetLexerParser.IF)
            self.state = 120
            self.test()
            self.state = 121
            self.block()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SetLexerParser.ELSE:
                self.state = 122
                self.match(SetLexerParser.ELSE)
                self.state = 123
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SetLexerParser.WHILE, 0)

        def test(self):
            return self.getTypedRuleContext(SetLexerParser.TestContext,0)


        def block(self):
            return self.getTypedRuleContext(SetLexerParser.BlockContext,0)


        def getRuleIndex(self):
            return SetLexerParser.RULE_while_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_statement" ):
                listener.enterWhile_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_statement" ):
                listener.exitWhile_statement(self)




    def while_statement(self):

        localctx = SetLexerParser.While_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_while_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(SetLexerParser.WHILE)
            self.state = 127
            self.test()
            self.state = 128
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(SetLexerParser.FOR, 0)

        def exprlist(self):
            return self.getTypedRuleContext(SetLexerParser.ExprlistContext,0)


        def IN(self):
            return self.getToken(SetLexerParser.IN, 0)

        def testlist(self):
            return self.getTypedRuleContext(SetLexerParser.TestlistContext,0)


        def block(self):
            return self.getTypedRuleContext(SetLexerParser.BlockContext,0)


        def getRuleIndex(self):
            return SetLexerParser.RULE_for_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_statement" ):
                listener.enterFor_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_statement" ):
                listener.exitFor_statement(self)




    def for_statement(self):

        localctx = SetLexerParser.For_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_for_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(SetLexerParser.FOR)
            self.state = 131
            self.exprlist()
            self.state = 132
            self.match(SetLexerParser.IN)
            self.state = 133
            self.testlist()
            self.state = 134
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TestContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def or_test(self):
            return self.getTypedRuleContext(SetLexerParser.Or_testContext,0)


        def getRuleIndex(self):
            return SetLexerParser.RULE_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest" ):
                listener.enterTest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest" ):
                listener.exitTest(self)




    def test(self):

        localctx = SetLexerParser.TestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_test)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.or_test()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Or_testContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def and_test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SetLexerParser.And_testContext)
            else:
                return self.getTypedRuleContext(SetLexerParser.And_testContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(SetLexerParser.OR)
            else:
                return self.getToken(SetLexerParser.OR, i)

        def getRuleIndex(self):
            return SetLexerParser.RULE_or_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr_test" ):
                listener.enterOr_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr_test" ):
                listener.exitOr_test(self)




    def or_test(self):

        localctx = SetLexerParser.Or_testContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_or_test)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.and_test()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SetLexerParser.OR:
                self.state = 139
                self.match(SetLexerParser.OR)
                self.state = 140
                self.and_test()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class And_testContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def not_test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SetLexerParser.Not_testContext)
            else:
                return self.getTypedRuleContext(SetLexerParser.Not_testContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(SetLexerParser.AND)
            else:
                return self.getToken(SetLexerParser.AND, i)

        def getRuleIndex(self):
            return SetLexerParser.RULE_and_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd_test" ):
                listener.enterAnd_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd_test" ):
                listener.exitAnd_test(self)




    def and_test(self):

        localctx = SetLexerParser.And_testContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_and_test)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.not_test()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SetLexerParser.AND:
                self.state = 147
                self.match(SetLexerParser.AND)
                self.state = 148
                self.not_test()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Not_testContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(SetLexerParser.NOT, 0)

        def not_test(self):
            return self.getTypedRuleContext(SetLexerParser.Not_testContext,0)


        def comparison(self):
            return self.getTypedRuleContext(SetLexerParser.ComparisonContext,0)


        def getRuleIndex(self):
            return SetLexerParser.RULE_not_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot_test" ):
                listener.enterNot_test(self)
